tests/suite/fail/regression/reg_move_26.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r26"
    take(s)
    print(s) //~ ERROR was moved
}
